client/me/help/help-teaser-button.scss
.help__help-teaser-button .card {
	border-left: 3px solid var( --color-primary );
	display: flex;
	margin: 16px 0;
	padding: 12px;

	.button {
		margin-left: auto;
	}

	&.is-no-margin {
		margin: 0;
	}
}

.help__help-teaser-text {
	padding-right: 10px;
}

.help__help-teaser-button-icon {
	color: var( --color-primary );
	border-radius: 50%;
	margin-right: 16px;
	background-color: var( --color-surface );
	align-self: center;
}

.help__help-teaser-button-title {
	color: var( --color-neutral-70 );
	font-size: 14px;
	font-weight: 600;
	padding-right: 15px;
}

.help__help-teaser-button-description {
	color: var( --color-neutral-light );
	font-size: 12px;
	display: block;
	padding-right: 15px;
}

